--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -42,6 +42,11 @@ jobs:
         if: github.ref == 'refs/heads/release-1.23.0'
         run: rsync --archive --verbose --compress -c --delete-after --exclude=.git* --exclude=.git/ --exclude=README.es.md --exclude=README.en.md --exclude=README.pl.md --exclude=README.md --exclude=.gitignore --exclude=node_modules --exclude=ecosystem.config.js --exclude=.env --exclude=build --exclude=dist --exclude=.vscode ./dist/student-app/ ${{ secrets.SSH_USER_NAME_RELEASE_FRONT }}@${{ secrets.SSH_HOST_RELEASE }}:/var/www/ncoderelease/${{ secrets.SSH_HOST_RELEASE }}
 
+      - name: Build for development and Install dependencies DEV
+        if: github.ref == 'refs/heads/develop'
+        run: |
+          npm install
+
       - name: Adding Known Hosts development DEV
         if: github.ref == 'refs/heads/dev'
         run: ssh-keyscan -p 22 -H n-code-dev.in.net  >> ~/.ssh/known_hosts
