--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -43,7 +43,7 @@ jobs:
         run: rsync --archive --verbose --compress -c --delete-after --exclude=.git* --exclude=.git/ --exclude=README.es.md --exclude=README.en.md --exclude=README.pl.md --exclude=README.md --exclude=.gitignore --exclude=node_modules --exclude=ecosystem.config.js --exclude=.env --exclude=build --exclude=dist --exclude=.vscode ./dist/student-app/ ${{ secrets.SSH_USER_NAME_RELEASE_FRONT }}@${{ secrets.SSH_HOST_RELEASE }}:/var/www/ncoderelease/${{ secrets.SSH_HOST_RELEASE }}
 
       - name: Build for development and Install dependencies DEV
-        if: github.ref == 'refs/heads/develop'
+        if: github.ref == 'refs/heads/dev'
         run: |
           npm install
 
