--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: 📂 Deploy with rsync development DEV
         if: github.ref == 'refs/heads/dev'
-        run: rsync --archive --verbose --compress -c --delete-after --exclude=.git* --exclude=.git/ --exclude=README.es.md --exclude=README.en.md --exclude=README.pl.md --exclude=README.md --exclude=.gitignore --exclude=node_modules --exclude=ecosystem.config.js --exclude=.env --exclude=build --exclude=dist --exclude=.vscode ./ ${{ secrets.SSH_USER_NAME_DEV_FRONT }}@${{ secrets.SSH_HOST_DEV }}:/var/www/ncodedev/${{ secrets.SSH_HOST_DEV }}
+        run: rsync --archive --verbose --compress -c --delete-after --exclude=.git* --exclude=.git/ --exclude=README.es.md --exclude=README.en.md --exclude=README.pl.md --exclude=README.md --exclude=.gitignore --exclude=node_modules --exclude=ecosystem.config.js --exclude=.env --exclude=build --exclude=dist --exclude=.vscode ./ ${{ secrets.SSH_USER_NAME_DEV_FRONT }}@${{ secrets.SSH_HOST_DEV }}:/var/www/ncodedevm/${{ secrets.SSH_HOST_DEV }}
 
       - name: Adding Known Hosts DEV => TEST
         if: github.ref == 'refs/heads/dev'
@@ -66,7 +66,6 @@ jobs:
         if: github.ref == 'refs/heads/test'
 
         run: rsync --archive --verbose --compress -c --delete-after --exclude=.git* --exclude=.git/ --exclude=README.es.md --exclude=README.en.md --exclude=README.pl.md --exclude=.gitignore --exclude=node_modules --exclude=ecosystem.config.js --exclude=.env --exclude=build --exclude=dist --exclude=.vscode ./ ${{ secrets.SSH_USER_NAME_TEST_FRONT }}@${{ secrets.SSH_HOST_TEST }}:/var/www/ncodetest/${{ secrets.SSH_HOST_TEST }}
-
 # on:
 #   push:
 #     branches:
@@ -112,7 +111,7 @@ jobs:
 
 #       - name: 📂 Deploy with rsync development DEV
 #         if: github.ref == 'refs/heads/dev'
-#         run: rsync --archive --verbose --compress -c --delete-after --exclude=.git* --exclude=.git/ --exclude=README.es.md --exclude=README.en.md --exclude=README.pl.md --exclude=README.md --exclude=.gitignore --exclude=node_modules --exclude=ecosystem.config.js --exclude=.env --exclude=build --exclude=dist --exclude=.vscode ./dist/student-app/ ${{ secrets.SSH_USER_NAME_DEV_FRONT }}@${{ secrets.SSH_HOST_DEV }}:/var/www/ncodedev/${{ secrets.SSH_HOST_DEV }}
+#         run: rsync --archive --verbose --compress -c --delete-after --exclude=.git* --exclude=.git/ --exclude=README.es.md --exclude=README.en.md --exclude=README.pl.md --exclude=README.md --exclude=.gitignore --exclude=node_modules --exclude=ecosystem.config.js --exclude=.env --exclude=build --exclude=dist --exclude=.vscode ./dist/student-app/ ${{ secrets.SSH_USER_NAME_DEV_FRONT }}@${{ secrets.SSH_HOST_DEV }}:/var/www/ncodedevm/${{ secrets.SSH_HOST_DEV }}
 
 #       - name: Adding Known Hosts DEV => TEST
 #         if: github.ref == 'refs/heads/dev'
